--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,2 +1,8 @@
+//$baseFontFamily: Arial,Helvetica,sans-serif  !default;
+$baseFontSize: 16px !default;
+$baseLineHeight: 23px !default;
+
 @import "bootstrap";
 @import "bootstrap-responsive";
+
+
