--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,6 +1,7 @@
-<footer class="container">
+<footer class="">
 	<div class="span4">developed by <b><a href="http://cristheinz.info" target="_blank">cristheinz</a></b></div>
-	
-	<p class="muted">© <%= Time.now.year %> - Vou Viajar Turismo. Todos os direitos reservados.</p>
-	
+	<br/>
+	<center>
+		<small style="padding-top:40px;">© <%= Time.now.year %> - Vou Viajar Turismo. Todos os direitos reservados.</small>
+	</center>
 </footer>
