--- a/app/views/layouts/_skype-call.html.erb
+++ b/app/views/layouts/_skype-call.html.erb
@@ -2,7 +2,7 @@
 <div id="SkypeButton_Call_vouviajarturismo_1">
   <script type="text/javascript">
     Skype.ui({
-      "name": "chat",
+      "name": "call",
       "element": "SkypeButton_Call_vouviajarturismo_1",
       "participants": ["vouviajarturismo"],
       "imageSize": 32
