--- a/app/views/static_pages/_passaporte.pt.html.erb
+++ b/app/views/static_pages/_passaporte.pt.html.erb
@@ -11,11 +11,11 @@ Plantão: (0xx41) 3251-7501<br/>
 Atendimento das 08h00 às 12h00, e das 14h00 às 18h00
 </address>
 
-<strong>Links úteis:</strong>
-<a href='http://www.dpf.gov.br/servicos/passaporte/requerer-passaporte' target="_blank">Como tirar seu passaporte</a>
-<a href='http://www.dpf.gov.br/servicos/passaporte/documentacao-necessaria' target="_blank">Documentação para tirar seu passaporte</a>
-<a href='http://www.dpf.gov.br/servicos/passaporte' target="_blank">O que fazer em caso de perda ou roubo</a>
-<a href='http://www.dpf.gov.br/servicos/passaporte' target="_blank">Embarque de menores com passaportes novos</a>
-<a href='http://www2.anac.gov.br/imprensa/regrasBagagemInter.asp' target="_blank">Bagagem de Mão</a>
-<a href='http://www.vouviajarturismo.com.br/#!comunicado-abav/c1wwk' target="_blank">Deportação de Passageiros(Comunicado)</a>
-<a href='http://www.vouviajarturismo.com.br/#!retencaopassaporte/c7vv' target="_blank">Retenção de Passaporte</a>
+<strong>Links:</strong><br/>
+<a href='http://www.dpf.gov.br/servicos/passaporte/requerer-passaporte' target="_blank">Como tirar seu passaporte</a><br/>
+<a href='http://www.dpf.gov.br/servicos/passaporte/documentacao-necessaria' target="_blank">Documentação para tirar seu passaporte</a><br/>
+<a href='http://www.dpf.gov.br/servicos/passaporte' target="_blank">O que fazer em caso de perda ou roubo</a><br/>
+<a href='http://www.dpf.gov.br/servicos/passaporte' target="_blank">Embarque de menores com passaportes novos</a><br/>
+<a href='http://www2.anac.gov.br/imprensa/regrasBagagemInter.asp' target="_blank">Bagagem de Mão</a><br/>
+<a href='http://www.vouviajarturismo.com.br/#!comunicado-abav/c1wwk' target="_blank">Deportação de Passageiros(Comunicado)</a><br/>
+<a href='http://www.vouviajarturismo.com.br/#!retencaopassaporte/c7vv' target="_blank">Retenção de Passaporte</a><br/>
