--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,19 +1,32 @@
 <% provide(:title, t(:about)) %>
-<div class="row">
-	<div class="span12">
-		<div class="about">
-			<h3><%= t(:about)%></h3>
-			<p><%=profile.about%></p>
-
-			<h3><%= t(:mission)%></h3>
-			<p><%=profile.mission%></p>
-
-			<h3><%= t(:pillars)%></h3>
-			<ul>
-				<%profile.pillars.split(/,/).each do |v|%>
-					<li><%=v%></li>
-				<%end%>
-			</ul>
+		<h4><%= t(:about)%></h4>
+		<div class="row">
+			<div class="span7 offset1">
+				<p><%=profile.about%></p>
+			</div>
 		</div>
-	</div>
-</div>
+
+		<h4><%= t(:mission)%></h4>
+		<div class="row">
+			<div class="span7 offset1">
+				<p><%=profile.mission%></p>
+			</div>
+		</div>
+
+		<h4><%= t(:pillars)%></h4>
+		<div class="row">
+			<div class="span7 offset1">
+				<p>
+					<%profile.pillars.split(/,/).each do |v|%>
+						<%= v%><br/>
+					<%end%>
+					<!--
+					<ul>
+						<%profile.pillars.split(/,/).each do |v|%>
+							<li><%= v%></li>
+						<%end%>
+					</ul>
+					-->
+				</p>
+			</div>
+		</div>
