--- a/app/views/static_pages/info.html.erb
+++ b/app/views/static_pages/info.html.erb
@@ -1,7 +1,5 @@
 <% provide(:title, t(:info)) %>
-<div class="row">
-	<div class="span12">
-		<h3><%=t(:info)%></h3>
+		<h4><%=t(:info)%></h4>
 		<div class="inner-box">
 
 			<div class="accordion" id="accordion2">
@@ -88,35 +86,33 @@
 
 		</div>
 		
-		<h3><%=t(:links)%></h3>
+		<h4><%=t(:links)%></h4>
 		<div class="inner-box">
 			<ul class="nav nav-pills">
   				<li class="span2">
-    				<div class="thumbnail">
-      					<%= image_tag 'thumb0.png'%>
-      					<strong><%= link_to t(:t0), 'http://www.infraero.gov.br/voos/index.aspx', target: '_blank'%></strong>
-    				</div>
+    				<a href="http://www.infraero.gov.br/voos/index.aspx" target="_blank" class="thumbnail">
+   						<%= image_tag 'thumb0.png'%>
+   						<strong><%= t(:t0)%></strong>
+    				</a>
   				</li>
   				<li class="span2">
-    				<div class="thumbnail">
+    				<a href="http://www2.tursites.com.br/cache/mapa_fuso2.htm" target="_blank" class="thumbnail">
       					<%= image_tag 'thumb1.png' %>
-      					<strong><%= link_to t(:t1), 'http://www2.tursites.com.br/cache/mapa_fuso2.htm', target: '_blank'%></strong>
-    				</div>
+      					<strong><%= t(:t1)%></strong>
+    				</a>
   				</li>
   				<li class="span2">
-    				<div class="thumbnail">
+    				<a href="http://portuguese.brazil.usembassy.gov/pt/visas.html" target="_blank" class="thumbnail">
       					<%= image_tag 'thumb2.png'%>
-      					<strong><%= link_to t(:t2), 'http://portuguese.brazil.usembassy.gov/pt/visas.html', target: '_blank'%></strong>
-    				</div>
+      					<strong><%= t(:t2)%></strong>
+    				</a>
   				</li>
   				<li class="span2">
-    				<div class="thumbnail">
-      					<%= image_tag 'thumb3.png'%>
-      					<strong><%= link_to t(:t3), 'http://europa.eu/index_pt.htm', target: '_blank'%></strong>
-    				</div>
+    				<a href="http://europa.eu/index_pt.htm" target="_blank" class="thumbnail">
+    					<%= image_tag 'thumb3.png'%>
+      					<strong><%= t(:t3)%></strong>
+    				</a>
   				</li>
 			</ul>
 		</div>
 
-	</div>
-</div>
