--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,18 +1,18 @@
-<div class="page-title visible-desktop">
-	<strong><%="Vou Viajar Turismo".upcase %></strong>
+<div class="page-title visible-desktop offset3">
+	<h1><%="Vou Viajar Turismo".upcase %></h1>
 </div>	
 <%= image_tag('banner.jpg', class: 'container') %>
 
 <header class="navbar navbar-inverse navbar-static-top">
   <div class="navbar-inner">
-    <div class="container">
+    <div class="">
       <!-- .btn-navbar is used as the toggle for collapsed navbar content -->
       <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </a>
-      <div class="the-brand hidden-desktop"><%= "Vou Viajar Turismo".upcase %></div>
+      <div class="the-brand hidden-desktop"><strong><%= "Vou Viajar Turismo".upcase %></strong></div>
       <div class="nav-collapse collapse">
       <nav>
         <ul class="nav pull-right">
@@ -35,7 +35,7 @@
           		<li class="divider-vertical"></li>
           		<li><%= link_to t(:contacts), contact_path %></li>
           	<%end%>
-          	<li><a></a></li>
+          	<!--<li><a></a></li>-->
         </ul>
       </nav>
       </div>
