--- a/app/views/static_pages/news.html.erb
+++ b/app/views/static_pages/news.html.erb
@@ -1,16 +1,31 @@
 <% provide(:title, t(:news)) %>
 		<h4><%=t(:lnews)%></h4>
 		<div class="inner-box">
-			<div class="row-fluid">
+			<ul class="thumbnails">
 			<%@feed.entries.each do |entry| %>
-				<div class="thumbnail span4">
-					<h4><%= link_to entry.title, entry.url, target: '_blank'%></h4>
+			
+				<div class="thumbnail span9">
+					<h3><%= link_to entry.title, entry.url, target: '_blank'%></h3>
 					<p>
 						<%=entry.summary.html_safe%>
 						<%= link_to t(:more), entry.url, target: '_blank'%>
 					</p>
 				</div>
+
 			<%end%>
-			</div>
+			</ul>
 			<div class=""><%="#{t(:source)}: #{@feed.title}"%></div>
 		</div>
+<script>
+(function($) {
+    $.fn.uniformHeight = function() {
+        var maxHeight   = 0,
+            max         = Math.max;
+
+        return this.each(function() {
+            maxHeight = max(maxHeight, $(this).height());
+        }).height(maxHeight);
+    }
+})(jQuery);
+//$(".thumbnails").find(".thumbnail").uniformHeight();
+</script>
