--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -41,7 +41,7 @@
 				<h4><%=t(:other_products)%></h4>
 				<div class="inner-box">
 					<div class="row-fluid">
-						<% if @pb.size>3%>
+						<% if @pb.size>=3%>
 
 
 						<div id="myCarousel2" class="carousel slide">
@@ -51,12 +51,14 @@
             						<%= link_to image_tag(@pb[1].image.to_s, class: 'span4'), @pb[1].pdf.to_s, target: '_blank' if @pb[1] %>
             						<%= link_to image_tag(@pb[2].image.to_s, class: 'span4'), @pb[2].pdf.to_s, target: '_blank' if @pb[2] %>
 				            	</div>
+				            	<% if @pb.size>=6%>
             					<div class="item">
             						<%= link_to image_tag(@pb[3].image.to_s, class: 'span4'), @pb[3].pdf.to_s, target: '_blank' if @pb[3] %>
         	    					<%= link_to image_tag(@pb[4].image.to_s, class: 'span4'), @pb[4].pdf.to_s, target: '_blank' if @pb[4] %>
     	        					<%= link_to image_tag(@pb[5].image.to_s, class: 'span4'), @pb[5].pdf.to_s, target: '_blank' if @pb[5] %>
 					            </div>
-				            	<%if @pb.size>6%>
+					            <%end%>
+				            	<%if @pb.size=9%>
             					<div class="item">
             						<%= link_to image_tag(@pb[6].image.to_s, class: 'span4'), @pb[6].pdf.to_s, target: '_blank' if @pb[6] %>
         	    					<%= link_to image_tag(@pb[7].image.to_s, class: 'span4'), @pb[7].pdf.to_s, target: '_blank' if @pb[7] %>
