--- a/app/assets/stylesheets/static_pages.css.scss
+++ b/app/assets/stylesheets/static_pages.css.scss
@@ -50,7 +50,8 @@ footer a:hover {
 h4 {
   background: $h3-bg-color url('icon.png') 10px no-repeat;
   color: $h3-color;
-  padding: 15px 60px;
+  padding: 13px 60px;
+  font-style: italic;
 }
 
 .page-title {
@@ -89,7 +90,7 @@ h4 {
   padding-right: 35px;
   padding-left: 35px;
   padding-top: 25px;
-  padding-bottom: 15px;
+  padding-bottom: 0px;
   z-index:1;
   color: $tbox-color;
 }
