--- a/app/views/contact_mailer/contact_email.html.erb
+++ b/app/views/contact_mailer/contact_email.html.erb
@@ -6,5 +6,6 @@
   <body>
     <p><%= @name %>, deixou a seguinte mensagem:</p>
     <p><%= @message %></p>
+    <p>email: <%= @email %></p>
   </body>
 </html>
