--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -58,7 +58,7 @@
     	        					<%= link_to image_tag(@pb[5].image.to_s, class: 'span4'), @pb[5].pdf.to_s, target: '_blank' if @pb[5] %>
 					            </div>
 					            <%end%>
-				            	<%if @pb.size=9%>
+				            	<%if @pb.size==9%>
             					<div class="item">
             						<%= link_to image_tag(@pb[6].image.to_s, class: 'span4'), @pb[6].pdf.to_s, target: '_blank' if @pb[6] %>
         	    					<%= link_to image_tag(@pb[7].image.to_s, class: 'span4'), @pb[7].pdf.to_s, target: '_blank' if @pb[7] %>
